# kulasis-ai-search

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  index.html
api/: main.py
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  server.py
backend/data/: id_to_lecture.json
experiments/: .env.example  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
experiments/configs/: base_config.yaml  bge_config.yaml  cohere_config.yaml
experiments/configs/eval/: base_config.yaml  bge_config.yaml  cohere_config.yaml
experiments/data/: lecture_urls.json  section_structure.json
experiments/data/exp/: syllabus.csv
experiments/data/summary/: summary_prompt3.json
experiments/scripts/: analyze_structure.py  common.py  generate_course_structure.py  id_to_lecture.py  scraper.py  summarize.py
experiments/scripts/samples/: transformers_embed.py
experiments/src/: constants.py  pipeline.py  run_evaluation.py  run_experiment.py
experiments/src/embedding/: __init__.py  e5_embedder.py  gemini_embedder.py
experiments/src/preprocessing/: __init__.py  simple_preprocessor.py  simple_selected_preprocessor.py
experiments/src/reranking/: __init__.py  base.py  bge_reranker.py  cohere_reranker.py  gemini_reranker.py
experiments/src/search/: base.py  simple_search.py
experiments/src/summarize/: __init__.py  base.py  simple_summarize.py
experiments/src/utils/: __init__.py  io.py  syllabus_parser.py
frontend/: Dockerfile  index.html  main.tsx  tsconfig.app.json  tsconfig.json
src/: App.tsx
(+20 files in other folders)
